    + Ajout de listes pour choisir la prise impactée par l'import ou l'export des programmes
    + Correction du lien du bouton permettant de passer d'un programme d'une prise à la configuration de la prise
    + Mise à jour du fichier index pour accepter 6 capteurs
    + Ajout de deux capteurs supplémentaires dans la table sensors
    + Ajout des firmwares de nouveaux capteurs

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Apr 22 14:12:42 CEST 2014


Cultibox (1.3.05) precise; urgency=low
    + Selection d'un ou plusieurs capteurs possible dans la visualisation des logs
    + Enregistrement des courbes déselectionnées sur le changement de jours des logs (bouton suivant et précédent)
    + Le zoom en X sur les logs ne modifie plus l'affichage en Y
    + Rechargement de la page de configuration arès un formatage de la carte SD
    + Correction de l'affichage des coûts: on scroll après le calcul du coût ce qui permet d'éviter un problème d'affichage sur mac
    + Changement de l'affichage du menu de configuration des prises pour ressembler à celui du menu de configuration
    + Ajout de la définition des autres capteurs (ph, ec...)
    + Ajout de l'heure du min/max des valeurs affichées pour les logs
    + Possiilité de cacher la boîte de message pour le temps d'une session
    + Le bouton 'fermer' de l'importation des logs ne s'affiche maintenant qu'à la fin du chargement des fichiers logs ET powers et non lorsque l'un des deux est terminé
    + Correction de l'enregistrement de la version du firmware
    + Ajout de la mise à jour de l'id dans le fichier de configuration de la Cultibox
    + Optimisation du chargement des logs power

-- Yann Genevois <yann.genevois@cultibox.fr> Sun Mar 23 13:48:54 CET 2014


Cultibox (1.3.04) precise; urgency=low
    + Ajout du menu wifi et des pages associées
    + Ajout du traitement des données XML pour la page wifi
    + Ajout de la possibilité de créer des programmes définit avec une prise variateur