@@ -11,6 +11,7 @@ Cultibox (1.3.06) precise; urgency=low
     + Mise à jour du fichier index pour accepter 6 capteurs
     + Ajout de deux capteurs supplémentaires dans la table sensors
     + Ajout des firmwares de nouveaux capteurs
+    + Ajout du fichier plugidx pour le multiprogramme
 
 -- Yann Genevois <yann.genevois@cultibox.fr> Tue Apr 22 14:12:42 CEST 2014
 
